fixes header layout on smaller screens <400px

--- a/client/styles/_buttons.sass
+++ b/client/styles/_buttons.sass
@@ -16,11 +16,12 @@
 
 .base-button-wrapper
     padding: $spacer-1
-    width: 100px
+    width: 80px
     text-align: center
     display: flex
     justify-content: center
     align-items: center
+    height: 40px
     .base-button-content:after
         content: ""
         top: 65%
@@ -44,7 +45,7 @@
         position: relative
         display: inline-block
         text-align: center
-        font-size: 20px
+        font-size: $text-1
         text-decoration: none 
         &:after
             content: ""
