--- a/client/styles/_header.sass
+++ b/client/styles/_header.sass
@@ -2,8 +2,8 @@ header
     display: flex
     align-items: center
     flex-direction: column
-    height: 60px
-    
+    height: 100%
+    justify-content: space-between
     padding: $spacer-1 
     width: 100%
     transition: 5s ease height
@@ -11,6 +11,9 @@ header
     h1
         display: hidden
         color: $colors-white
+        padding-top: $spacer-2
+    div div span
+        font-size: $text-1
     @media all and (min-width: 525px)
         @include row-between
         min-height: 10vh
